--- a/style.css
+++ b/style.css
@@ -1,3 +1,5 @@
+/*-----------------------Global Styles---------------------------*/
+
 * {
     margin: 0;
     padding: 0;
@@ -7,6 +9,7 @@ body {
     background-color: rgb(88, 10, 40);
     color: white;
     font-family: 'Quicksand', sans-serif;
+    line-height: 1.4;
 }
 
 nav {
@@ -40,6 +43,8 @@ nav ul li a:hover {
     color: #ff98ab;
     font-size: 1.01rem;
 }
+
+/*-----------------------Home---------------------------*/
 
 .sectionone {
     margin: 18px 0px;
@@ -98,16 +103,23 @@ nav ul li a:hover {
     border-color: rgb(113, 11, 50);
 }
 
-.ctopsec {
+/*-----------------------Certificates---------------------------*/
+
+.csec {
     margin: 70px 200px;
     display: flex;
     justify-content: space-around;
+    border-bottom: 0.01em dashed #ff98ab;
     /* background-color: white; */
-    height: 250px;
+    /* height: 250px; */
 }
 
-.ctopleft img {
-    width: 35%;
+.cleft {
+    width: 30%;
+}
+
+.cleft img {
+    width: 85%;
     margin: 25px 25px 50px 25px;
     border-radius: 10px;
     border-style: inset;
@@ -116,53 +128,24 @@ nav ul li a:hover {
     padding: 0px;
 }
 
-.ctopright {
-    width: 60%;
+.cright {
+    width: 45%;
     /* background-color: white; */
     margin: 45px 10px 25px 0px;
     color: white;
+    padding-top: 0.8rem;
     /* display: flex;
     justify-content: space-around; */
+    /* text-align: center; */
 }
 
-.cbottomsec {
-    margin: 70px 200px;
-    display: flex;
-    justify-content: space-around;
-    /* background-color: white; */
-    height: 250px;
-}
-
-.cbottomleft img {
-    width: 35%;
-    margin: 25px 25px 50px 25px;
-    border-radius: 10px;
-    border-style: inset;
-    border-width: 11px;
-    border-color: rgb(113, 11, 50);
-    padding: 0px;
-}
-
-.cbottomright {
-    width: 60%;
-    /* background-color: white;*/
-    margin: 45px 10px 25px 10px;
-    color: white;
-    /* display: flex;
-    justify-content: space-around;*/
-}
-
-.ctopright img {
+.cright img {
     width: 30px;
     border: 2px inset #5d8be1;
     padding: 1px;
 }
 
-.cbottomright img {
-    width: 30px;
-    border: 2px inset #5d8be1;
-    padding: 1px;
-}
+/*-----------------------Contact Me---------------------------*/
 
 .contact {
     margin: 100px 500px 0px 500px;
